--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/dompurify": "^3.0.5",
     "clsx": "^2.0.0",
+    "dompurify": "^3.0.6",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
