--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/typography": "^0.5.10",
     "@types/dompurify": "^3.0.5",
     "clsx": "^2.0.0",
